data/derived/fa15/progs/unify/prog2726.ml.out
Characters 45-46:
  let f a x = List.fold_right a 0 x in
                                ^
Error: This expression has type int but an expression was expected of type
         'a list
